assets/styles/index.css
*{
    box-sizing: border-box;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    font-size: 18px;
}



body{
    /* background-color: rgba(177, 223, 243, 1); */
    /* height: 100%; */
}



.banner{
    background-color: rgba(132, 188, 213, 1);
}



.tile{
    margin: 0px;
    padding: 0px;
}



.tile-container{
    width: 200px;
    height: 300px;
    background-color: rgba(132, 188, 213, 1);
    padding: 15px;
    border-radius: 10px;
}



.row{
    width: 600px;
}



.column{
    padding: 10px;
}



.button-image{
    margin-top: 120px;
    margin-bottom: 30px;
    height: 150px;
    width: 150px;
}


.icon-image{
    height: 150px;
    width: 150px;
    margin: 40px;
}


.icon-title{
    font-size: 24px;
    margin: 5px;

}



.tile-container{
    padding: 10px;
    margin: 30px;
    height: 30vh;
    width: 50%;
}



.card{
    background-color: rgb(202, 236, 250);
    height: 220px;
    width: 500px;
    border-radius: 5px;
    padding: 15px;
    margin: 15px;
}



.card:hover{
    color: white;
}



.card-image{
    border-radius: 5px;
}



.card_name{
    font-size: 26px;
    margin-bottom: 5px;
    background-color: rgba(132, 188, 213, 1);
    padding: 5px;
    border-radius: 5px;
}



.card_text{
    margin: 10px;
}



#position{
    font-size: 20px;
}



#questions_container:hover{
    color: white;
}


.banner:hover{
    color: white;
}


#overview_text:hover{
    color: white;
}


#logo{
    font-size: 30px;
    margin: 10px;
    margin-left: 30px;
}



#container{
    /* margin: 50px; */
    width: 80%;
    height: 80vh;
    margin: auto;
    margin-top: 50px;
    border-radius: 15px;
}



#overview{
    width: 700px;
    background-color: rgba(132, 188, 213, 1);
    padding: 20px;
    border-radius: 10px;
}



#questions_container{
    /* height: 200px; */
    width: 100%;
    bottom: 0;
    left: 0;
    background-color: rgba(132, 188, 213, 1);
    margin: 20px;
    border-radius: 10px;
    padding: 20px;
}



#questions-title{
    margin-bottom: 20px;
}

#carpets_container:hover{
    color: white;
}



#houses_container:hover{
    color:white;
}



#maintenance_container:hover{
    color:white;
}




#painting_container:hover{
    color:white;
}

